--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "api-tests": "newman run APITesting.postman_collection.json"
+        "api-tests": "newman run APITesting.postman_collection.json --disable-unicode"
     },
     "author": "",
     "dependencies": {
